@@ -1,268 +1,372 @@
 # Prerequisites
 
-Before diving into OpenFrame OSS Lib development, ensure your system meets the following requirements.
+Before you begin working with OpenFrame OSS Libraries, ensure your development environment meets the following requirements. This guide covers all the software, tools, and system requirements needed for successful development and deployment.
 
 ## System Requirements
 
-| Component | Minimum Version | Recommended | Notes |
-|-----------|----------------|-------------|-------|
-| **Java** | 21 | 21+ | OpenJDK or Oracle JDK |
-| **Maven** | 3.8.0 | 3.9+ | Build tool |
-| **Memory** | 8GB RAM | 16GB+ | For development with all services |
-| **Storage** | 10GB free | 20GB+ | Includes dependencies and databases |
-| **OS** | Any Java-supported | Linux/macOS | Windows supported via WSL |
+### Hardware Requirements
 
-## Required Software
+| Component | Minimum | Recommended |
+|-----------|---------|-------------|
+| **CPU** | 4 cores | 8+ cores |
+| **RAM** | 8 GB | 16+ GB |
+| **Storage** | 20 GB free | 50+ GB SSD |
+| **Network** | Stable internet | High-speed connection |
 
-### 1. Java Development Kit (JDK) 21
+### Operating Systems
 
-OpenFrame OSS Lib requires Java 21 as specified in the parent POM.
+OpenFrame OSS Libraries supports development on:
 
-**Install OpenJDK 21:**
+- ✅ **Linux** (Ubuntu 20.04+, CentOS 8+, RHEL 8+)
+- ✅ **macOS** (10.15+)
+- ✅ **Windows** (10/11 with WSL2 recommended)
 
+> **Note**: For Windows users, we recommend using WSL2 (Windows Subsystem for Linux) for the best development experience.
+
+## Core Development Tools
+
+### Java Development Kit (JDK)
+
+**Required Version**: Java 21+
+
+The project is built with Java 21 and uses modern language features. Earlier versions are not supported.
+
+#### Installation Options:
+
+**Option 1: Oracle JDK**
 ```bash
-# macOS (using Homebrew)
-brew install openjdk@21
+# Download from Oracle website
+# https://www.oracle.com/java/technologies/downloads/
+```
 
+**Option 2: OpenJDK (Recommended)**
+```bash
 # Ubuntu/Debian
 sudo apt update
 sudo apt install openjdk-21-jdk
 
-# CentOS/RHEL
-sudo dnf install java-21-openjdk-devel
+# macOS (using Homebrew)
+brew install openjdk@21
 
-# Windows
-# Download from https://adoptium.net/temurin/releases/
+# Windows (using Chocolatey)
+choco install openjdk21
 ```
 
-**Verify installation:**
-
+**Verification:**
 ```bash
 java -version
 # Should show: openjdk version "21.x.x"
 ```
 
-### 2. Apache Maven 3.8+
+### Maven Build Tool
 
-The project uses Maven for dependency management and builds.
+**Required Version**: Maven 3.6+
 
-**Install Maven:**
+Maven is used for dependency management and building the project.
+
+#### Installation:
 
 ```bash
-# macOS (using Homebrew) 
-brew install maven
-
 # Ubuntu/Debian
 sudo apt install maven
 
-# CentOS/RHEL
-sudo dnf install maven
+# macOS (using Homebrew)
+brew install maven
 
 # Windows (using Chocolatey)
 choco install maven
 ```
 
-**Verify installation:**
-
+**Verification:**
 ```bash
-mvn --version
-# Should show Maven 3.8+ and Java 21
+mvn -version
+# Should show Maven 3.6+ and Java 21
 ```
 
-### 3. Git
+## Database Systems
 
-Required for cloning the repository and version control.
+OpenFrame OSS Libraries requires multiple database systems for different use cases.
 
+### MongoDB
+
+**Required Version**: 5.0+
+
+MongoDB serves as the primary operational database for user data, organizations, configurations, and real-time state.
+
+#### Installation:
+
+**Docker (Recommended for Development)**
 ```bash
-# Verify Git is installed
-git --version
+docker run --name openframe-mongo \
+  -p 27017:27017 \
+  -d mongo:7-jammy
 ```
 
-## Development Environment Setup
-
-### IDE Recommendations
-
-**IntelliJ IDEA (Recommended)**
-- Ultimate or Community Edition
-- Spring Boot plugin (bundled)
-- Lombok plugin (bundled in newer versions)
-- GraphQL plugin for DGS support
-
-**Eclipse**  
-- Spring Tools 4 (STS4)
-- Lombok plugin
-- M2E Maven integration
-
-**VS Code**
-- Extension Pack for Java
-- Spring Boot Extension Pack
-- Lombok Annotations Support
-
-### Environment Variables
-
-Set the following environment variables for development:
-
+**Native Installation**
 ```bash
-# Java 21 (if multiple versions installed)
-export JAVA_HOME=/path/to/jdk-21
+# Ubuntu/Debian
+wget -qO - https://www.mongodb.org/static/pgp/server-7.0.asc | sudo apt-key add -
+echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu jammy/mongodb-org/7.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-7.0.list
+sudo apt update
+sudo apt install -y mongodb-org
 
-# Maven heap size for large builds
-export MAVEN_OPTS="-Xmx2048m -XX:MaxPermSize=256m"
+# macOS
+brew tap mongodb/brew
+brew install mongodb-community
 
-# Optional: Maven local repository location  
-export M2_HOME=/path/to/maven
+# Windows
+# Download from: https://www.mongodb.com/try/download/community
 ```
 
-**For Windows:**
+### Redis
 
-```cmd
-set JAVA_HOME=C:\Program Files\Eclipse Adoptium\jdk-21.x.x
-set MAVEN_OPTS=-Xmx2048m
+**Required Version**: 6.0+
+
+Redis provides caching, session storage, and distributed locking capabilities.
+
+#### Installation:
+
+**Docker (Recommended)**
+```bash
+docker run --name openframe-redis \
+  -p 6379:6379 \
+  -d redis:7-alpine
+```
+
+**Native Installation**
+```bash
+# Ubuntu/Debian
+sudo apt install redis-server
+
+# macOS
+brew install redis
+
+# Windows
+# Use Docker or WSL2
+```
+
+### Apache Kafka
+
+**Required Version**: 2.8+
+
+Kafka handles event streaming and messaging between services.
+
+#### Installation:
+
+**Docker Compose (Recommended)**
+```yaml
+# Create docker-compose.kafka.yml
+version: '3.8'
+services:
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+    ports:
+      - "2181:2181"
+
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    depends_on:
+      - zookeeper
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+```
+
+```bash
+docker-compose -f docker-compose.kafka.yml up -d
 ```
 
 ## Optional Dependencies
 
-While not strictly required for building the core libraries, these services enhance the development experience:
+### Apache Cassandra
 
-### Database Services (for integration testing)
+**Required Version**: 4.0+
 
-**MongoDB** - Primary data store
+Used for audit log storage and time-series data.
+
+**Docker Installation:**
 ```bash
-# Docker (recommended for development)
-docker run -d --name mongodb -p 27017:27017 mongo:7
-
-# macOS
-brew install mongodb-community
-
-# Ubuntu/Debian
-sudo apt install mongodb-org
+docker run --name openframe-cassandra \
+  -p 9042:9042 \
+  -d cassandra:4.1
 ```
 
-**Redis** - Caching layer
+### Apache Pinot
+
+**Required Version**: 0.12+
+
+Provides real-time analytics and OLAP capabilities.
+
+**Docker Installation:**
 ```bash
-# Docker
-docker run -d --name redis -p 6379:6379 redis:7
-
-# macOS  
-brew install redis
-
-# Ubuntu/Debian
-sudo apt install redis-server
+docker run --name openframe-pinot \
+  -p 9000:9000 \
+  -d apachepinot/pinot:latest-jdk21 QuickStart -type batch
 ```
 
-### Messaging & Streaming (for full platform testing)
+### NATS Server
 
-**Apache Kafka** - Event streaming
+**Required Version**: 2.9+
+
+Handles real-time agent communication and streaming.
+
+**Docker Installation:**
 ```bash
-# Docker Compose (recommended)
-# Creates Kafka + Zookeeper
-docker-compose up kafka zookeeper
+docker run --name openframe-nats \
+  -p 4222:4222 \
+  -p 8222:8222 \
+  -d nats:latest -js
 ```
 
-**NATS** - Client messaging
-```bash
-# Docker
-docker run -d --name nats -p 4222:4222 nats:latest
+## Development Environment Setup
 
-# Binary install
-# Download from https://nats.io/download/
+### Environment Variables
+
+Create a `.env` file in your development environment with the following variables:
+
+```bash
+# Database Connections
+MONGODB_URI=mongodb://localhost:27017/openframe
+REDIS_URL=redis://localhost:6379
+KAFKA_BOOTSTRAP_SERVERS=localhost:9092
+
+# Optional Analytics
+CASSANDRA_CONTACT_POINTS=localhost:9042
+PINOT_BROKER_URL=http://localhost:8099
+
+# Security Configuration
+JWT_SECRET=your-development-jwt-secret
+OAUTH_ENCRYPTION_KEY=your-32-char-encryption-key
+
+# External Services (Development)
+NATS_URL=nats://localhost:4222
 ```
 
-## Verification Checklist
+### IDE Configuration
 
-Run these commands to verify your development environment:
+**Recommended IDEs:**
+- ✅ IntelliJ IDEA Ultimate (with Spring Boot plugin)
+- ✅ Eclipse with Spring Tools
+- ✅ Visual Studio Code with Extension Pack for Java
 
+**Required IDE Plugins:**
+- Lombok (for code generation)
+- Spring Boot Tools
+- Maven integration
+
+## Verification Commands
+
+After installing all prerequisites, verify your setup:
+
+### Check Java and Maven
 ```bash
-# 1. Java version
 java -version
-# ✅ Should show Java 21
-
-# 2. Maven version  
-mvn --version
-# ✅ Should show Maven 3.8+ with Java 21
-
-# 3. Git access
-git --version
-# ✅ Should show Git version
-
-# 4. Memory check
-free -h  # Linux/macOS
-# ✅ Should show 8GB+ available RAM
-
-# 5. Disk space
-df -h
-# ✅ Should show 10GB+ free space
+mvn -version
 ```
 
-## Network & Access Requirements
+### Test Database Connections
+```bash
+# MongoDB
+mongosh --eval "db.adminCommand('ping')"
 
-### GitHub Access
+# Redis
+redis-cli ping
 
-Ensure you can access the repository:
+# Kafka (if running)
+kafka-console-producer.sh --bootstrap-server localhost:9092 --topic test
+```
+
+### Environment Verification Script
+```bash
+#!/bin/bash
+echo "=== OpenFrame OSS Lib Environment Check ==="
+
+# Java
+if java -version 2>&1 | grep -q "21"; then
+    echo "✅ Java 21+ detected"
+else
+    echo "❌ Java 21+ not found"
+fi
+
+# Maven
+if mvn -version &> /dev/null; then
+    echo "✅ Maven available"
+else
+    echo "❌ Maven not found"
+fi
+
+# MongoDB
+if mongosh --quiet --eval "quit()" 2>/dev/null; then
+    echo "✅ MongoDB connection successful"
+else
+    echo "❌ MongoDB connection failed"
+fi
+
+# Redis
+if redis-cli ping &> /dev/null; then
+    echo "✅ Redis connection successful"
+else
+    echo "❌ Redis connection failed"
+fi
+```
+
+## Network and Security Requirements
+
+### Firewall Ports
+
+Ensure the following ports are accessible:
+
+| Service | Port | Purpose |
+|---------|------|---------|
+| MongoDB | 27017 | Database access |
+| Redis | 6379 | Cache access |
+| Kafka | 9092 | Message broker |
+| Cassandra | 9042 | Analytics database |
+| Pinot | 8099, 9000 | Analytics queries |
+| NATS | 4222, 8222 | Agent communication |
+
+### Memory Settings
+
+For optimal performance, configure JVM memory settings:
 
 ```bash
-# Test GitHub connectivity
-curl -I https://github.com
-
-# Clone test (if you have access)
-git clone https://github.com/flamingo-stack/openframe-oss-lib.git
+export MAVEN_OPTS="-Xmx4g -XX:MaxMetaspaceSize=512m"
 ```
-
-### Maven Dependencies
-
-The project uses GitHub Packages for artifact distribution. No special configuration is needed for public access, but verify your network allows Maven Central and GitHub Packages:
-
-```bash
-# Test Maven Central access
-curl -I https://repo1.maven.org/maven2/
-
-# Test GitHub Packages access  
-curl -I https://maven.pkg.github.com/
-```
-
-## IDE-Specific Configuration
-
-### IntelliJ IDEA
-
-1. **Project Import**:
-   - File → Open → Select root `pom.xml`
-   - Import as Maven project
-   - Enable auto-import for Maven changes
-
-2. **Lombok Setup**:
-   - Install Lombok plugin (if not bundled)
-   - Enable annotation processing: Settings → Build → Compiler → Annotation Processors
-
-3. **Code Style**:
-   - Import Spring Java code style (optional)
-   - Configure line length to 120 characters
-
-### Eclipse/STS
-
-1. **Project Import**:
-   - File → Import → Existing Maven Projects
-   - Select root directory
-
-2. **Lombok Setup**:
-   - Download lombok.jar from projectlombok.org
-   - Run: `java -jar lombok.jar`
-   - Install in Eclipse installation
 
 ## Next Steps
 
-With your environment set up, you're ready to:
+Once your environment is ready:
 
-1. **[Quick Start](quick-start.md)** - Build and run the project
-2. **[First Steps](first-steps.md)** - Explore the architecture
-3. **[Development Guide](../development/setup/local-development.md)** - Dive deeper into development
+1. **[Quick Start Guide](quick-start.md)** - Build and run OpenFrame OSS Lib in 5 minutes
+2. **[Development Setup](../development/setup/local-development.md)** - Detailed development environment configuration
 
 ## Troubleshooting
 
-**Common Issues:**
+### Common Issues
 
-- **OutOfMemoryError during build**: Increase `MAVEN_OPTS="-Xmx4096m"`
-- **Java version conflicts**: Ensure `JAVA_HOME` points to JDK 21
-- **Lombok not working**: Install IDE plugin and enable annotation processing
-- **Maven download failures**: Check network connectivity and proxy settings
+**Java Version Mismatch**
+```bash
+# Check JAVA_HOME
+echo $JAVA_HOME
+# Update if needed
+export JAVA_HOME=/path/to/java21
+```
 
-For more help, join our [OpenMSP Community Slack](https://join.slack.com/t/openmsp/shared_invite/zt-36bl7mx0h-3~U2nFH6nqHqoTPXMaHEHA).
+**Maven Build Failures**
+```bash
+# Clear cache and retry
+mvn clean install -U
+```
+
+**Database Connection Issues**
+- Verify services are running: `docker ps`
+- Check network connectivity: `telnet localhost 27017`
+- Review firewall settings
+
+For additional help, join our [OpenMSP Slack Community](https://join.slack.com/t/openmsp/shared_invite/zt-36bl7mx0h-3~U2nFH6nqHqoTPXMaHEHA).
